--- a/MVC/CI-Platform/CIPlatformWeb/CIPlatformWeb.csproj
+++ b/MVC/CI-Platform/CIPlatformWeb/CIPlatformWeb.csproj
@@ -35,6 +35,7 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Controllers\" />
+    <Folder Include="wwwroot\images\user_images\" />
     <Folder Include="wwwroot\images\storyimages\" />
   </ItemGroup>
 
