--- a/MVC/CI-Platform/CIPlatformWeb/CIPlatformWeb.csproj
+++ b/MVC/CI-Platform/CIPlatformWeb/CIPlatformWeb.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\images\mission_images\" />
     <Folder Include="wwwroot\images\user_images\" />
     <Folder Include="wwwroot\images\storyimages\" />
   </ItemGroup>
